= 5.0.23 - TBD -
Fixed: License was being deactivated for single product licenses.

= 5.0.22 - 17.03.2025 -
Added: Integrated WPChill Notification System.

= 5.0.21 - 20.01.2025 =
Fixed: Media Library protected files placeholder bug ( [#1622](https://github.com/WPChill/download-monitor/issues/1622) )
Fixed: Media Library Protect function incorrect file path ( [#1623](https://github.com/WPChill/download-monitor/issues/1623) )
Added: New filter for Cookie path ( [#1626](https://github.com/WPChill/download-monitor/issues/1626) )

= 5.0.20 - 08.01.2025 =
Fixed: Short description was hidden in certain situations ( [#1618](https://github.com/WPChill/download-monitor/issues/1618) )

= 5.0.19 - 21.12.2024 =
Fixed: Upsells text domain error

= 5.0.18 - 19.12.2024 =
Fixed: Text domain error

= 5.0.17 - 17.12.2024 =
Changed: Disabled seasonal promotions notifications.

= 5.0.16 - 10.12.2024 =
Fixed: Gutenberg block not working properly ( [#1610](https://github.com/WPChill/download-monitor/issues/1610) )

= 5.0.15 - 06.12.2024 =
Fixed: WP 6.7.1 compatibility issue ( [#1607](https://github.com/WPChill/download-monitor/issues/1607) )
Fixed: PHP Warning fix for file type

= 5.0.14 - 29.10.2024 =
Fixed: Session performance problems
Added: No Access modal for the Members lock functionality

= 5.0.13 - 22.10.2024 =
Fixed: Bulk editing download paths was deleting the paths ( [#1574](https://github.com/WPChill/download-monitor/issues/1574) )
Fixed: Enabling paths from Download edit not working in some conditions ( [#1576](https://github.com/WPChill/download-monitor/issues/1576) )
Fixed: Paths conflicts ( [#1566](https://github.com/WPChill/download-monitor/issues/1566) )
Fixed: Quick edit for terms & conditions ( [#1565](https://github.com/WPChill/download-monitor/issues/1565) )
Changed: Upsells ( [#1567](https://github.com/WPChill/download-monitor/issues/1567) )
Fixed: Security issue for Key Generation ( thanks to @truonghuuphuc )
Added: Extra notices for access permissions
