@@ -7,7 +7,7 @@
 	Author: WPChill
 	Author URI: https://wpchill.com
 	Requires at least: 6.4
-	Tested up to: 6.7
+	Tested up to: 6.8
 	Requires PHP: 7.4
 	Text Domain: download-monitor
 
