@@ -2,7 +2,7 @@
 Contributors: wpchill, silkalns, barrykooij, mikejolley  
 Tags: download manager, file manager, digital store, ecommerce, password protection  
 Requires at least: 5.5  
-Tested up to: 6.7  
+Tested up to: 6.8  
 Stable tag: 5.0.23
 License: GPLv3  
 Requires PHP: 7.6  
@@ -113,6 +113,7 @@ Admin hits are not counted, log out and try again!
 == Changelog ==
 = 5.0.23 - TBD -
 Fixed: License was being deactivated for single product licenses.
+Fixed: Security update
 
 = 5.0.22 - 17.03.2025 -
 Added: Integrated WPChill Notification System.
